--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "colorthief": "^2.6.0",
+    "immutability-helper": "^3.1.1",
     "react": "^18.3.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-parallax": "^3.5.1",
     "react-router-dom": "^7.2.0",
