--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "colorthief": "^2.6.0",
+    "gh-pages": "^6.3.0",
     "immutability-helper": "^3.1.1",
     "react": "^18.3.1",
     "react-dnd": "^16.0.1",
@@ -21,11 +22,14 @@
     "react-transition-group": "^4.4.5",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://joshamstutz.github.io/site",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
