fixed bad homepage

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-transition-group": "^4.4.5",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://joshamstutz.github.io",
+  "homepage": "https://joshamstutz.github.io/site/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
